data/diff_tests/wasmtime/nop_IncorrectHandlingofControlFlowAcrossModuleBoundaries_810.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\02\98\80\80\80\00\01\07\6d\6f\64\75\6c\65"
    "\41\0c\65\78\70\6f\72\74\65\64\46\75\6e\63\00\00"
    "\03\82\80\80\80\00\01\00\07\8c\80\80\80\00\01\08"
    "\74\65\73\74\46\75\6e\63\00\01\0a\8f\80\80\80\00"
    "\01\89\80\80\80\00\00\10\00\01\41\00\01\1a\0b"
  )
""
)